Prevent text wrapping in menus

--- a/src/webui/www/public/css/style.css
+++ b/src/webui/www/public/css/style.css
@@ -175,7 +175,15 @@ a.propButton img {
 .contextMenu { border:1px solid #999; padding:0; background:#eee; list-style-type:none; display:none;}
 .contextMenu .separator { border-top:1px solid #999; }
 .contextMenu li { margin:0; padding:0;}
-.contextMenu li a { display:block; padding:5px 10px 5px 5px; font-size:12px; text-decoration:none; font-family:tahoma,arial,sans-serif; color:#000; }
+.contextMenu li a {
+    display: block;
+    padding: 5px 14px 5px 5px;
+    font-size: 12px;
+    text-decoration: none;
+    font-family: tahoma,arial,sans-serif;
+    color: #000;
+    white-space: nowrap;
+}
 .contextMenu li a:hover { background-color:#ddd; }
 .contextMenu li a.disabled { color:#ccc; font-style:italic; }
 .contextMenu li a.disabled:hover { background-color:#eee; }
